package SmartHome.ddd;

public interface DomainId {
	
}
